--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.0",
-    "react-router-dom": "^7.9.6",
     "lucide-react": "^0.554.0",
-    "react-dom": "^19.2.0"
+    "react-router-dom": "^7.9.6",
+    "react-dom": "^19.2.0",
+    "react": "^19.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
